--- a/AnalogCumDigitalClock/AD.css
+++ b/AnalogCumDigitalClock/AD.css
@@ -18,6 +18,7 @@ body {
     box-shadow: 1px 2px 10px rgba(44, 158, 97, 0.8), -1px -2px 20px rgba(11, 127, 140, 0.8), 5px 1px 30px rgba(157, 11, 11, 0.8);
     width: 80vmin;
     height: 80vmin;
+    border: 4px solid whitesmoke;
     border-radius: 50%;
     background-color: rgba(32, 39, 45, 0.4);
     display: flex;
